# rules_docker-issue-2124

./: BUILD.bazel  Main.java  README.md  WORKSPACE
