load("@io_bazel_rules_docker//java:image.bzl", "java_image")

java_library(
    name = "lib",
    srcs = ["Main.java"],
)

java_binary(
    name = "bin",
    main_class = "demo.Main",
    runtime_deps = [":lib"],
)

java_image(
    name = "image",
    args = [
        # These flags are compatible with docker, but are very distinct.
        # This lets us to trace the incorrect flags all the way to execution.
        "-e=foo=A",
        "-e=bar=B",
    ],
    base = "@java//image",
    main_class = "demo.Main",
    runtime_deps = [":lib"],
)
